--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-html{
-  width:100%;
-  height:100%;
+@font-face {
+  font-family: "spaceMono";
+  src: url("../public/Space_Mono/SpaceMono-Bold.ttf");
+  font-weight: bold;
 }
-body{
-  width:100%;
-  height:100%;
-  margin:0;
-  background-color:#F6F8FF;
-  font-family: "Space Mono", monospace;
+@font-face {
+  font-family: "spaceMono";
+  src: url("../public/Space_Mono/SpaceMono-Regular.ttf");
+  font-weight: normal;
 }
-#root{
-  width:100%;
-  height:100%;
-  box-sizing: border-box;
+
+html {
+  width: 100%;
+  height: 100%;
+  font-family: "spaceMono";
+  font-weight: normal;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "spaceMono";
+  margin: 0;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  font-family: "spaceMono";
 }
